--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -35,6 +35,7 @@
     width: 100%;
     margin: 0 auto;
     height: 100vh;
+    background-color: rgba(0, 0, 0, 0.897);
 
 }
 .about .aboutContent{
@@ -55,13 +56,15 @@
     margin-top: 1em;
     font-style: italic;
     font-size: 1.5em;
-    /* font-family: 'Roboto', sans-serif; */
+    color: aliceblue;
+    
 }
 
 .skill{
     width: 100%;
     margin: 0 auto;
     background-color: rgba(0, 0, 0, 0.897);
+    height: 100vh;
 }
 
 .skill .skillContent{
@@ -74,7 +77,7 @@
 }
 .skillsLists{
     display: grid;
-    grid-template-columns: repeat(4, 1fr);
+    grid-template-columns: repeat(6, 1fr);
     gap: 1em;
 }
 .skillsLists .skillBox{
