--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -103,8 +103,16 @@
     margin: 0 auto;
     
 }
-.projects .projectsContent .projectSubDesc{
-    letter-spacing: 2px;
+.projects .projectsContent .projectBox{
+    background-color: #3E2C41;
+    color:aliceblue;
+    letter-spacing: 1px;
+    border-top: 1px solid rgb(79, 79, 253);
+   
+}
+
+.projects .projectsContent .projectBox .card-body h4{
+    font-weight: 300;
 }
 
 .services{
